--- a/forum/src/main/resources/application.yml
+++ b/forum/src/main/resources/application.yml
@@ -1,17 +1,3 @@
 spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:forum
-    username: sa
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    #defer-datasource-initialization: true
-    properties:
-      hibernate: true
-      format_sql: true
-  h2:
-    console:
-      enabled: true
-jwt:
-  secret: secreto
+  profiles:
+    active: @activatedProperties@
